--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -28,8 +28,9 @@
 // ----------------------
 // @import  'blocks/header';
 @import  'blocks/slider';
-@import  'business-frontpage';
-// @import  'blocks/footer';
+@import  'blocks/business-frontpage';
+@import  'blocks/footer';
+@import 'blocks/gallery';
 // @import 'blocks/content';
 
 
