--- a/src/css/blocks/business-frontpage.scss
+++ b/src/css/blocks/business-frontpage.scss
@@ -24,6 +24,10 @@ body {
 
 /* Customize the text color and shadow color and to optimize text legibility. */
 
+// .navbar-nav a {
+//     color:white;
+// }
+
 .tagline {
     text-shadow: 0 0 10px #000;
     color: #fff;
