--- a/src/css/blocks/footer.scss
+++ b/src/css/blocks/footer.scss
@@ -2,6 +2,10 @@
 text-align:right;
 width:100px;
 display:inline;
+
+}
+.socials a {
+	text-decoration:none;
 }
 -facebook-official{
 	color:#3B5998;
