--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -31,7 +31,7 @@
 @import  'blocks/business-frontpage';
 @import  'blocks/footer';
 @import 'blocks/gallery';
-// @import 'blocks/content';
+@import 'blocks/about';
 
 
 
