--- a/src/css/blocks/business-frontpage.scss
+++ b/src/css/blocks/business-frontpage.scss
@@ -4,13 +4,28 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
-body {
-    padding-top: 50px;
-    /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+/* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
+
+#toast-container .toast.toast-success{
+    background-color:#4A3B59;
+    width:400px;
+    height: auto;
+    margin:10% auto;
+}
+#toast-container {
+    width: 100%;
+}
+#toast-container *{
+    margin: 10% auto;
+    text-align:center;  
+}
+.toast-title {
+    font-size:20px;
+}
+.toast-message{
+    font-style:italic;
 }
 
-
-/* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
 
 .business-header {
     height: 400px;
@@ -55,4 +70,14 @@ text-align:center;
 }
 #inputMessage{
     height:150px;
+}
+
+nav navbar-nav {
+    cursor:pointer;
+}
+
+.fa-2x {
+    position: absolute;
+    right: 0;
+    margin-right: 10px;
 }
