--- a/src/css/blocks/footer.scss
+++ b/src/css/blocks/footer.scss
@@ -4,35 +4,35 @@ width:100px;
 display:inline;
 
 }
-.socials a {
+socials a {
 	text-decoration:none;
 }
--facebook-official{
-	color:#3B5998;
-	background-color:#fff;
+.fa-facebook-official{
+	color:white;
+	// background-color:#fff;
 }
 .fa-linkedin-square{
-	color:#0A6ABF;
-	background-color:#fff;
+	color:white;
+	// background-color:#fff;
 
 }
 .fa-twitter-square{
-	color:#25C4F6;
-	background-color:#fff;
+	color:white;
+	// background-color:#fff;
 
 }
 .fa-pinterest-square{
-	color:#C61119;
-	background-color:#fff;
+	color:white;
+	// background-color:#fff;
 
 }
 .fa-dribbble{
-	color:#FF5D94;
-	background-color:#fff;
+	color:white;
+	// background-color:#fff;
 
 }
 .fa-google-plus-square{
-	color:#D13E2F;
-	background-color:#fff;
+	color:white;
+	// background-color:#fff;
 
 }
