--- a/src/css/base/base.scss
+++ b/src/css/base/base.scss
@@ -29,7 +29,8 @@
 
 body {
     padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-
+    background:url('http://www.bianoti.com/wp-content/uploads/2015/11/Blurred-Backgroundnbspfond-ecran-hd1.jpg');
+    color:white;
 }
 
 /* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
