--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -24,6 +24,7 @@
 // Plugins
 // ----------------------
 
+
 // Elements
 // ----------------------
 // @import  'blocks/header';
@@ -32,6 +33,8 @@
 @import  'blocks/footer';
 @import 'blocks/gallery';
 @import 'blocks/about';
+@import 'blocks/admin';
+@import 'blocks/dashboard';
 
 
 
